--- a/contracts/01-tamagotchi/state/Cargo.toml
+++ b/contracts/01-tamagotchi/state/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "tamagotchi"
+name = "tamagotchi-state"
 version.workspace = true
 edition.workspace = true
 publish.workspace = true
 
 [dependencies]
+gmeta = { workspace = true, features = ["codegen"] }
 gstd.workspace = true
 tamagotchi-io.workspace = true
 
 [build-dependencies]
-gear-wasm-builder.workspace = true
-tamagotchi-io.workspace = true
+gear-wasm-builder = { workspace = true, features = ["metawasm"] }
