--- a/contracts/Cargo.toml
+++ b/contracts/Cargo.toml
@@ -19,7 +19,9 @@ members = [
     "06-tamagotchi-army",
     "escrow",
     "escrow/state",
-    "escrow-factory"
+    "escrow-factory",
+    "07-tamagotchi-battle",
+    "07-tamagotchi-battle/state",
 ]
 
 [workspace.dependencies]
@@ -40,7 +42,9 @@ tamagotchi-auto-io.path = "05-tamagotchi-auto/io"
 tamagotchi-army-io.path = "06-tamagotchi-army/io"
 escrow-io.path = "escrow/io"
 escrow-factory-io.path = "escrow-factory/io"
-
+tamagotchi-battle-state.path = "07-tamagotchi-battle/state"
+tamagotchi-battle-io.path = "07-tamagotchi-battle/io"
+tamagotchi.path = "01-tamagotchi"
 
 tokio = "1"
 
@@ -51,4 +55,5 @@ sharded-fungible-token-logic = { git = "https://github.com/gear-foundation/dapps
 sharded-fungible-token-storage = { git = "https://github.com/gear-foundation/dapps", tag = "v1.0.2" }
 sharded-fungible-token-io = { git = "https://github.com/gear-foundation/dapps", tag = "v1.0.2" }
 hex-literal = "0.4"
+hex = { version = "0.4", default-features = false }
 
