--- a/contracts/07-tamagotchi-battle/io/Cargo.toml
+++ b/contracts/07-tamagotchi-battle/io/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "tamagotchi-io"
+name = "tamagotchi-battle-io"
 version.workspace = true
 edition.workspace = true
 publish.workspace = true
 
 [dependencies]
-gmeta.workspace = true
 gstd.workspace = true
+gmeta.workspace = true
