--- a/contracts/07-tamagotchi-st-new/Cargo.toml
+++ b/contracts/07-tamagotchi-st-new/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
-name = "tamagotchi-auto-io"
+name = "tamagotchi-store"
 version.workspace = true
 edition.workspace = true
 publish.workspace = true
 
 [dependencies]
-gmeta.workspace = true
 gstd.workspace = true
+tamagotchi-store-io.workspace = true
 sharded-fungible-token-io.workspace = true
-store-io.workspace = true
+
+[build-dependencies]
+gear-wasm-builder.workspace = true
+tamagotchi-store-io.workspace = true
